--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "ui-exercise": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ui-exercise"
+    }
+  },
+  "defaultProject": "ui-exercise",
+  "cli": {
+    "analytics": false
+  }
 }
