--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,11 @@
   "useTabs": false,
   "singleQuote": true,
   "parser": "typescript",
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "cssEnable": [
+    "css",
+    "less",
+    "sass",
+    "scss"
+]
 }
